[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/password.gd" type="Script" id=1]
[ext_resource path="res://images/BGblur.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/Lilliput Steps.otf" type="DynamicFontData" id=3]
[ext_resource path="res://audio/error2.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/boot.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeToNormal"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="password" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BGblur" type="Sprite" parent="."]
position = Vector2( 956, 537 )
texture = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 657.0
margin_top = 434.0
margin_right = 1279.0
margin_bottom = 483.0
custom_fonts/font = SubResource( 3 )
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 663.0
margin_top = 394.0
margin_right = 1273.0
margin_bottom = 487.0
custom_fonts/font = SubResource( 4 )
text = "Enter Your 4 Digit Passcode"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fadeToNormal = SubResource( 2 )

[node name="bootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="errorSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0

[connection signal="ready" from="." to="." method="_on_password_ready"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
